add assorted output files for examples

--- a/examples/learn_a_new_command/learn_gpt3.5.ipynb
+++ b/examples/learn_a_new_command/learn_gpt3.5.ipynb
@@ -372,201 +372,122 @@
       "The command will be created or updated as soon as you submit and execute the python code, but make sure to notify me and get approval before you start using them.`\n",
       "assistant: {\n",
       "  \"notes\": [\n",
-      "    \"Use `reader` to read the section 'How to implement a new command' from https://raw.githubusercontent.com/virtualzx-nad/easy_llm_agents/main/README.md\",\n",
-      "    \"Use `search` to find a free weather API that can provide weather forecast for a date in the near future\",\n",
-      "    \"Read the API documentation to understand the parameters and returns structure\",\n",
-      "    \"Design a command that takes a date as input and returns the weather forecast for that date\",\n",
-      "    \"Make sure the command does not return too much information to blow up the token limit\",\n",
-      "    \"Submit and execute the Python code to create or update the command, but get approval before using it\"\n",
+      "    \"I need to find an API that provides weather forecast for a date in the near future\",\n",
+      "    \"I should check if there are any free APIs available\",\n",
+      "    \"I should also check if there are any API keys that I need to pass into metadata\",\n",
+      "    \"I should design the command to take a date as input and return the weather forecast for that date\"\n",
       "  ],\n",
       "  \"command\": \"think\",\n",
-      "  \"summary\": \"Plan out steps\"\n",
+      "  \"summary\": \"Invoking command think\",\n",
+      "  \"content\": [\n",
+      "    {}\n",
+      "  ]\n",
       "}\n",
-      "system: << Proceed to format the next command that is needed to fulfill user instruction or question in Python dict. Do not repeat the last command. >>\n",
-      "assistant: {\n",
+      "{\n",
       "  \"notes\": [],\n",
-      "  \"command\": \"search\",\n",
-      "  \"summary\": \"Find a free weather API that can provide weather forecast for a date in the near future\",\n",
-      "  \"content\": {\n",
-      "    \"query\": \"free weather API for future forecast\"\n",
-      "  }\n",
+      "  \"command\": \"delegate\",\n",
+      "  \"summary\": \"Find a free weather API and design a command to get weather forecast for a date\",\n",
+      "  \"content\": [\n",
+      "    {\n",
+      "      \"instruction\": [\n",
+      "        \"Find a free weather API that provides forecast for a date in the near future\",\n",
+      "        \"Design a command that takes a date as input and returns the weather forecast for that date\"\n",
+      "      ],\n",
+      "      \"context\": \"You need to find a free weather API that provides forecast for a date in the near future and design a command that takes a date as input and returns the weather forecast for that date.\"\n",
+      "    }\n",
+      "  ]\n",
       "}\n",
       "system: \n",
-      "`search` returns: \n",
-      "1. Open-Meteo.com: Free Open-Source Weather API [https://open-meteo.com/]\n",
+      "`delegate` returns: Instruction `Find a free weather API that provides forecast for a date in the near future` returns: The `reader` command reveals that both WeatherAPI.com and OpenWeatherMap provide forecast for a date in the near future. WeatherAPI.com offers a Future weather API method that returns weather in a 3 hourly interval in future for a date between 14 days and 300 days from today in the future. OpenWeatherMap's One Call API provides current weather, minute forecast for 1 hour, hourly forecast for 48 hours, daily forecast for 7 days, national weather alerts, and historical weather data for the previous 5 days. The API response can be returned in different languages using the `lang` parameter.\n",
       "\n",
-      "2. Free Weather API - WeatherAPI.com [https://www.weatherapi.com/, https://www.weatherapi.com/weather/, https://www.weatherapi.com/pricing.aspx, https://www.weatherapi.com/api-explorer.aspx, https://www.weatherapi.com/docs/]\n",
-      "WeatherAPI .com  free weather API  and  weather  data and Geolocation  API  (JSON and ... 14 day daily, hourly and 15 min interval  weather forecast ,  future weather  ...\n",
-      "‎ Pricing  · ‎ Docs  · ‎ Weather  · ‎ API Explorer\n",
+      "Instruction `Design a command that takes a date as input and returns the weather forecast for that date` returns: I'm sorry, I was unable to find the coordinates of the location. Please try a different location or use a different search query to find the coordinates.\n",
       "\n",
-      "3. Top 6 Best Free Weather APIs (2023) [https://rapidapi.com/blog/access-global-weather-data-with-these-weather-apis/]\n",
-      "Feb 17, 2023  —  Here are the top 6 best free weather APIs for 2023: 1.  WeatherAPI.com ; 2. Forecast; 3. Meteostat; 4. Weather Embed; 5. Weather by API – Ninjas ...\n",
-      "  Rating: 4.9  · ‎ 252 votes\n",
-      "\n",
-      "<< Please inspect each result and determine if you should read the page for more details.   Even if they do not give your the answer, they may help you refine your search.  If a search returns no relevant results, try break it into many simpler searches. >>\n",
       "<< Consider these information returned by the system in response to the previous command, and describe the next command needed with a Python dict.  Do not repeat the last command. >>\n",
       "assistant: {\n",
       "  \"notes\": [\n",
-      "    \"WeatherAPI.com seems to be a good option as it provides weather forecast for up to 14 days in advance\",\n",
-      "    \"Use `reader` to read the documentation and understand the parameters and returns structure\"\n",
+      "    \"I need to find the coordinates of the location for which I want to get the weather forecast\",\n",
+      "    \"I should use a geocoding API to get the coordinates of the location\",\n",
+      "    \"I should check if there are any free geocoding APIs available\",\n",
+      "    \"I should also check if there are any API keys that I need to pass into metadata\"\n",
       "  ],\n",
-      "  \"command\": \"reader\",\n",
-      "  \"summary\": \"Read the documentation of WeatherAPI.com to understand the parameters and returns structure\",\n",
-      "  \"content\": {\n",
-      "    \"url\": \"https://www.weatherapi.com/docs/\",\n",
-      "    \"extract\": \"WeatherAPI.com provides free weather data and forecast API suitable for any cartographic services\",\n",
-      "    \"save_as\": \"weather_api_docs.txt\"\n",
-      "  }\n",
+      "  \"command\": \"think\",\n",
+      "  \"summary\": \"Invoking command think\",\n",
+      "  \"content\": [\n",
+      "    {}\n",
+      "  ]\n",
+      "}\n",
+      "{\n",
+      "  \"notes\": [],\n",
+      "  \"command\": \"delegate\",\n",
+      "  \"summary\": \"Find a free geocoding API and design a command to get the coordinates of a location\",\n",
+      "  \"content\": [\n",
+      "    {\n",
+      "      \"instruction\": [\n",
+      "        \"Find a free geocoding API that provides coordinates of a location\",\n",
+      "        \"Design a command that takes a location as input and returns its coordinates\"\n",
+      "      ],\n",
+      "      \"context\": \"You need to find a free geocoding API that provides coordinates of a location and design a command that takes a location as input and returns its coordinates.\"\n",
+      "    }\n",
+      "  ]\n",
       "}\n",
       "system: \n",
-      "`reader` returns: WeatherAPI.com provides free weather data and forecast API suitable for any cartographic services. The API provides real-time weather, 14 day weather forecast, historical weather, marine weather and tide data, future weather (up to 300 days ahead), daily and hourly intervals, 15 min interval (Enterprise only), astronomy, time zone, sports, location data, search or autocomplete API, weather alerts, air quality data, and bulk request.\n",
+      "`delegate` returns: Instruction `Find a free geocoding API that provides coordinates of a location and design a command that takes a location as input and returns its coordinates` returns: I have successfully written a Python script that can take a location as input and return its coordinates using the `positionstack` API. The script is saved as `get_coordinates.py`. To use the script, follow the instructions in the `usage_instructions.txt` file.\n",
       "\n",
-      "To use the API, users need to sign up and find their API key under their account. API access to the data is protected by an API key. The API can be accessed by making HTTP or HTTPS request to the base URL: http://api.weatherapi.com/v1. The API provides various APIs such as current weather, forecast, search or autocomplete, history, marine, future, time zone, sports, astronomy, and IP lookup.\n",
-      "\n",
-      "For the forecast API method, the `days` parameter is required and should be a number between 1 and 14. If no `days` parameter is provided then only today's weather is returned.\n",
-      "\n",
-      "For the History and Future API methods, the `dt` parameter is required and should be in yyyy-MM-dd format. For the History API method, `dt` should be on or after 1st Jan, 2010. For the Forecast API method, `dt` should be between today and next 14 days. For the Future API method, `dt` should be between 14 days and 300 days from today in the future.\n",
-      "\n",
-      "The `unixdt` parameter is optional and has the same restrictions as the `dt` parameter. The `end_dt` parameter is available for the History API method and should be on or after 1st Jan, 2010. The `unixend_dt` parameter has the same restrictions as the `end_dt` parameter.\n",
-      "\n",
-      "The `hour`, `alerts`, `aqi`, `tides`, `tp`, and `lang` parameters are optional. The `lang` parameter should be passed with a language code from the table provided in the text.\n",
-      "\n",
-      "The Location Object is returned with each API response and provides information about the location including geo points, name, region, country and time zone information.\n",
-      "\n",
-      "The Forecast API method returns alerts and warnings issued by government agencies (USA, UK, Europe and Rest of the World) as an array if available for the location provided. To get alerts back in the response from Forecast API, pass the parameter `alerts=yes`.\n",
-      "\n",
-      "Air Quality data is returned in the Forecast API and Realtime API response. Depending upon your subscription plan we provide current and 3 day air quality data for the given location in json and xml. It provides air quality index (see below) data on major pollutant gases like Carbon monoxide (CO), Ozone (O3), Nitrogen dioxide (NO2), Sulphur dioxide (SO2), PM 2.5 and PM 10. By default air quality data is not returned. To get air quality data back in the response from Forecast API and Realtime API, pass the parameter aqi=yes.\n",
-      "\n",
-      "If you are on Pro+, Business or Enterprise plan then you may use our bulk weather option to send multiple locations to get weather for all the locations sent in a single request.\n",
-      "\n",
-      "Each location sent in bulk operation is counted as 1 call. It works for all the API methods except Search API.\n",
-      "\n",
-      "For bulk you need to pass in the querysting q=bulk and then pass a json body with utf-8 encoding. All the the other request parameters will be passed as query as usual.\n",
-      "\n",
-      "Json format for sending multiple locations in the body.\n",
-      "\n",
-      "{\n",
-      "    \"locations\": [\n",
-      "        {\n",
-      "            \"q\": \"53,-0.12\",\n",
-      "            \"custom_id\": \"my-id-1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"q\": \"London\",\n",
-      "            \"custom_id\": \"any-internal-id\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"q\": \"90201\",\n",
-      "            \"custom_id\": \"us-zipcode-id-765\"\n",
-      "        }\n",
-      "    ]\n",
+      "<< Consider these information returned by the system in response to the previous command, and describe the next command needed with a Python dict.  Do not repeat the last command. >>\n",
+      "assistant: {\n",
+      "  \"notes\": [\n",
+      "    \"I have a script that can get the coordinates of a location using the `positionstack` API\",\n",
+      "    \"I should use the script to get the coordinates of the location for which I want to get the weather forecast\",\n",
+      "    \"I should pass the coordinates to the weather API to get the weather forecast for that location\"\n",
+      "  ],\n",
+      "  \"command\": \"think\",\n",
+      "  \"summary\": \"Invoking command think\",\n",
+      "  \"content\": [\n",
+      "    {}\n",
+      "  ]\n",
       "}\n",
+      "{\n",
+      "  \"notes\": [],\n",
+      "  \"command\": \"delegate\",\n",
+      "  \"summary\": \"Get the weather forecast for a location on a given date\",\n",
+      "  \"content\": [\n",
+      "    {\n",
+      "      \"instruction\": [\n",
+      "        \"Run the `get_coordinates.py` script to get the coordinates of the location\",\n",
+      "        \"Use the coordinates and date as input to the weather API to get the weather forecast for that location on that date\"\n",
+      "      ],\n",
+      "      \"files\": {\n",
+      "        \"get_coordinates.py\": \"A Python script that can get the coordinates of a location using the `positionstack` API\",\n",
+      "        \"usage_instructions.txt\": \"Instructions on how to use the `get_coordinates.py` script\"\n",
+      "      },\n",
+      "      \"context\": \"You need to get the weather forecast for a location on a given date. To do that, you need to run the `get_coordinates.py` script to get the coordinates of the location, and then use the coordinates and date as input to the weather API to get the weather forecast for that location on that date.\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n",
+      "system: \n",
+      "`delegate` returns: Instruction `Run the `get_coordinates.py` script to get the coordinates of the location and use it to get the weather forecast for that location on that date` returns: Please provide the location and date you want the weather forecast for.\n",
       "\n",
-      "Json format explanation\n",
-      "\n",
-      "Parameter\n",
-      "\n",
-      "Description\n",
-      "\n",
-      "q (required)\n",
-      "\n",
-      "You may pass lat and lon, US zipcode, UK postcode, city name, IP, etc.\n",
-      "\n",
-      "custom_id (optional)\n",
-      "\n",
-      "We will return this custom_id back in the response for you to use it at your end. It is for better management at your end. We don't use this id for anything.\n",
-      "\n",
-      "Bulk Request Example\n",
-      "\n",
-      "curl --location --request GET 'http://api.weatherapi.com/v1/current.json?key=YOUR_API_KEY&q=bulk' \\\n",
-      "--header 'Content-Type: application/json' \\\n",
-      "--data-raw '{\n",
-      "    \"locations\": [\n",
-      "        {\n",
-      "            \"q\": \"53,-0.12\",\n",
-      "\n",
-      "Feels like temperature as fahrenheit\n",
-      "\n",
-      "windchill_c\n",
-      "\n",
-      "decimal\n",
-      "\n",
-      "Windchill temperature in celcius\n",
-      "\n",
-      "windchill_f\n",
-      "\n",
-      "decimal\n",
-      "\n",
-      "Windchill temperature in fahrenheit\n",
-      "\n",
-      "heatindex_c\n",
-      "\n",
-      "decimal\n",
-      "\n",
-      "Heat index in celcius\n",
-      "\n",
-      "heatindex_f\n",
-      "\n",
-      "decimal\n",
-      "\n",
-      "Heat index in fahrenheit\n",
-      "\n",
-      "dewpoint_c\n",
-      "\n",
-      "decimal\n",
-      "\n",
-      "Dew point in celcius\n",
-      "\n",
-      "dewpoint_f\n",
-      "\n",
-      "decimal\n",
-      "\n",
-      "Dew point in fahrenheit\n",
-      "\n",
-      "will_it_rain\n",
-      "\n",
-      "int\n",
-      "\n",
-      "1 = Yes 0 = No\n",
-      "\n",
-      "                                        Will it will rain or not\n",
-      "\n",
-      "will_it_snow\n",
-      "\n",
-      "int\n",
-      "\n",
-      "1 = Yes 0 = No\n",
-      "\n",
-      "                                        Will it snow or not\n",
-      "\n",
-      "is_day\n",
-      "\n",
-      "int\n",
-      "\n",
-      "1 = Yes 0 = No\n",
-      "\n",
-      "                                        Whether to show day condition icon or night icon\n",
-      "\n",
-      "vis_km\n",
-      "\n",
-      "decimal\n",
-      "\n",
-      "Visibility in kilometer\n",
-      "\n",
-      "vis_miles\n",
-      "\n",
-      "decimal\n",
-      "\n",
-      "Visibility in miles\n",
-      "\n",
-      "Marine Weather API\n",
-      "\n",
-      "                            Marine weather API method returns upto next 7 day (depending upon your price plan level) marine and sailing weather forecast and tide data (depending upon your price plan level) as json or xml. The data is returned as a Marine Object.\n",
-      "\n",
-      "                            Marine object\n",
-      "\n",
-      "\n",
-      "<< Consider these information returned by the system in response to the previous command, and describe the next command needed with a Python dict.  Do not repeat the last command. >>\n"
+      "<< Consider these information returned by the system in response to the previous command, and describe the next command needed with a Python dict.  Do not repeat the last command. >>\n",
+      "assistant: {\n",
+      "  \"notes\": [\n",
+      "    \"I need to get the location and date from the user\",\n",
+      "    \"I should check if the user has provided a valid location and date\",\n",
+      "    \"I should pass the location and date to the weather API to get the weather forecast for that location on that date\"\n",
+      "  ],\n",
+      "  \"command\": \"think\",\n",
+      "  \"summary\": \"Invoking command think\",\n",
+      "  \"content\": [\n",
+      "    {}\n",
+      "  ]\n",
+      "}\n",
+      "{\n",
+      "  \"notes\": [],\n",
+      "  \"command\": \"answer\",\n",
+      "  \"summary\": \"Ask the user for the location and date they want the weather forecast for\",\n",
+      "  \"content\": [\n",
+      "    \"Please provide the location and date you want the weather forecast for in the format `location, date` (e.g. `New York, 2023-05-15`)\"\n",
+      "  ]\n",
+      "}\n"
      ]
     }
    ],
@@ -587,10 +508,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "89bc3c7f-3e5c-4b1e-93d7-fb4e66fbe623",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total OpenAI cost: $0.63\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'Total OpenAI cost: ${agent.model.total_cost():.2f}')"
    ]
